<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/vit_home"
        android:backgroundTintMode="src_over"
        android:orientation="vertical"
        android:weightSum="5.5"
       >

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/shape"
            android:text="@string/app_name"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/academic"
            style="@style/CategoryStyle"
            android:background="@drawable/shape"
            android:text="@string/academic_blocks"
            android:textAllCaps="true"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/hsotel"
            style="@style/CategoryStyle"
            android:background="@drawable/shape"
            android:text="@string/hostel_blocks"
            android:textAllCaps="true"
            android:layout_weight="1"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/mess"
            style="@style/CategoryStyle"
            android:background="@drawable/shape"
            android:text="@string/mess"
            android:textAllCaps="true" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/nonacademic"
            style="@style/CategoryStyle"
            android:background="@drawable/shape"
            android:text="@string/non_academic"
            android:textAllCaps="true" />
        <Button
            android:layout_weight="0.5"
            android:id="@+id/dbview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="click to view db"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>