<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuggestionPage">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ECEFF1"
        android:orientation="vertical"
        android:padding="10dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:weightSum="8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="2dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/suggestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Suggestion" />

                    <RadioButton
                        android:id="@+id/issue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:text="@string/issue" />
                </RadioGroup>
            </LinearLayout>


            <me.grantland.widget.AutofitTextView
                android:id="@+id/block"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:gravity="center"
                android:shadowColor="#ffff"
                tools:text="block" />

            <Spinner
                android:id="@+id/problem_spinner"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:entries="@array/problem_spinner"
                android:prompt="@string/select" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/shape"
                android:gravity="top"
                android:hint="@string/Describe"
                android:lines="5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/add_image"
                    android:layout_width="49dp"
                    android:layout_height="match_parent"
                    android:background="@mipmap/click" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:gravity="center"
                    android:text="@string/add_image" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="50dp"
                    android:layout_height="45dp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="20dp"
            android:shadowColor="#ffff"
            android:text="@string/send" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>